--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -7,3 +7,25 @@
   year={2013},
   publisher={Elsevier Science}
 }
+
+@book{Lexis,
+  title={Visualizing Mortality Dynamics in the Lexis Diagram},
+  author={Rau, R. and Bohk-Ewald, C. and Muszynska, M.M. and Vaupel, J.W.},
+  isbn={9783319648200},
+  lccn={2017948687},
+  series={The Springer Series on Demographic Methods and Population Analysis},
+  url={https://books.google.co.cr/books?id=ttpCDwAAQBAJ},
+  year={2017},
+  publisher={Springer International Publishing}
+}
+
+@book{Lifetable,
+  title={The Life Table: Modelling Survival and Death},
+  author={Wunsch, G. and Mouchart, M. and Duch{\^e}ne, J.},
+  isbn={9781402006388},
+  lccn={2002070436},
+  series={European Studies of Population},
+  url={https://books.google.co.cr/books?id=ySex55d4nlsC},
+  year={2002},
+  publisher={Springer Netherlands}
+}
