--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -29,3 +29,15 @@
   year={2002},
   publisher={Springer Netherlands}
 }
+
+@book{karup_king,
+  title={The Methods and Materials of Demography},
+  author={Shryock, H.S. and Siegel, J.S. and Larmon, E.A. and United States. Bureau of the Census},
+  number={v. 2},
+  lccn={76609905},
+  series={The Methods and Materials of Demography},
+  url={https://books.google.co.cr/books?id=SuXrAAAAMAAJ},
+  year={1980},
+  publisher={U.S. Department of Commerce, Bureau of the Census}
+}
+
