datasets and functions

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -41,3 +41,22 @@
   publisher={U.S. Department of Commerce, Bureau of the Census}
 }
 
+@book{Shryock,
+  title={The Methods and Materials of Demography},
+  author={Shryock, H.S. and Siegel, J.S. and Larmon, E.A. and United States. Bureau of the Census},
+  number={v. 1},
+  lccn={76609905},
+  series={The methods and materials of demography},
+  url={https://books.google.co.cr/books?id=8Oo6AQAAMAAJ},
+  year={1980},
+  publisher={Department of Commerce, Bureau of the Census}
+}
+
+@book{moultrie,
+  title={Tools for demographic estimation},
+  author={Moultrie, Tom A and Dorrington, RE and Hill, Allan G and Hill, Kenneth and Tim{\ae}us, IM and Zaba, Basia},
+  year={2013},
+  publisher={International Union for the Scientific Study of Population}
+}
+
+
