Adding new functions

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -59,4 +59,34 @@
   publisher={International Union for the Scientific Study of Population}
 }
 
+@article{correlate_df,
+author = {Harry Khamis},
+title ={Measures of Association: How to Choose?},
+journal = {Journal of Diagnostic Medical Sonography},
+volume = {24},
+number = {3},
+pages = {155-162},
+year = {2008},
+doi = {10.1177/8756479308317006},
+URL = {
+        https://doi.org/10.1177/8756479308317006
+
+},
+eprint = {
+        https://doi.org/10.1177/8756479308317006
+
+}
+}
+
+@InProceedings{anonymous,
+author="Oechslin, Philippe",
+editor="Boneh, Dan",
+title="Making a Faster Cryptanalytic Time-Memory Trade-Off",
+booktitle="Advances in Cryptology - CRYPTO 2003",
+year="2003",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="617--630",
+isbn="978-3-540-45146-4"
+}
 
