--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -90,3 +90,9 @@ pages="617--630",
 isbn="978-3-540-45146-4"
 }
 
+@mastersthesis{tesis,
+author = {Cesar Gamboa-Sanabria},
+title = {La Sobreparametrizacion en el ARIMA: una aplicacion a datos costarricenses},
+school = {Universidad de Costa Rica},
+year = {2022}
+}
