--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -67,15 +67,7 @@ volume = {24},
 number = {3},
 pages = {155-162},
 year = {2008},
-doi = {10.1177/8756479308317006},
-URL = {
-        https://doi.org/10.1177/8756479308317006
-
-},
-eprint = {
-        https://doi.org/10.1177/8756479308317006
-
-}
+doi = {10.1177/8756479308317006}
 }
 
 @InProceedings{anonymous,
